# PhPAzure

./: .env.example  AzureStorageBlob.php  DefaultAzureCredentials.php  test.php  upload.php
py/: pyproject.toml  test.py
